After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 771565 - Calendar name subtitle in event entry not updated on change in event entry dialog
Calendar name subtitle in event entry not updated on change in event entry di...
Status: RESOLVED FIXED
Product: gnome-calendar
Classification: Applications
Component: User Interface
3.21.x
Other Linux
: Normal normal
: 3.26
Assigned To: GNOME Calendar maintainers
GNOME Calendar maintainers
Depends on:
Blocks:
 
 
Reported: 2016-09-17 02:45 UTC by Mohammed Sadiq
Modified: 2017-04-17 18:20 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
edit-dialog: setup the correct label when selecting a calendar (1.08 KB, patch)
2016-09-28 03:34 UTC, Georges Basile Stavracas Neto
committed Details | Review

Description Mohammed Sadiq 2016-09-17 02:45:03 UTC
When the Calendar selected is changed in event entry dialog, the subtitle of the HeaderBar which shows the name of the Calendar is not updated, it always shows the default calendar name.
Comment 1 Georges Basile Stavracas Neto 2016-09-28 03:34:17 UTC
Created attachment 336412 [details] [review]
edit-dialog: setup the correct label when selecting a calendar

Since now we manually manage the headerbar title and subtitle, setting
them via GtkHeaderBar API won't have any effect.

Fix that by directly setting the subtitle label.
Comment 2 Georges Basile Stavracas Neto 2016-09-28 03:34:56 UTC
Thanks for the report!

Attachment 336412 [details] pushed as a8f4346 - edit-dialog: setup the correct label when selecting a calendar